--- a/index.html
+++ b/index.html
@@ -229,6 +229,11 @@
             text-align: center;
             font-size: 200%;
         }
+    .endline{
+        fontfamily: cursive;
+        font-size: 10px;
+        color: darkolivegreen;
+        
         
 </style>
 
@@ -410,6 +415,9 @@
     <footer>
         <div class="footer">
             Thank You <br> Visit us Again
+            <div class="endline">
+                With LOVE "kowshee"
+            </div>
         </div>
     </footer>
 
